Fixing content alignment

--- a/src/sass/Client/_client_detail.scss
+++ b/src/sass/Client/_client_detail.scss
@@ -94,7 +94,7 @@
         .client-photos{
             margin-top: 50px;
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             flex-wrap: wrap;
             .photo{
                 display: flex;
