--- a/src/sass/Client/_client_list.scss
+++ b/src/sass/Client/_client_list.scss
@@ -57,7 +57,7 @@
         .clients{
             margin-top: 50px;
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             flex-wrap: wrap;
             .client{
                 display: flex;
